--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,11 +27,16 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'mysql:mysql-connector-java:8.0.32' // MySQL 드라이버 추가 (필요한 경우)
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0' // 최신 버전 사용
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT API
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'   // JWT 구현체
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test' // Spring Security 테스트 의존성 추가
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
