--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test' // Spring Security 테스트 의존성 추가
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
