--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation("org.springframework.boot:spring-boot-starter-reactor-netty")
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test' // Spring Security 테스트 의존성 추가
