--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,6 +4,9 @@ spring:
     username: onion-user
     password: onion1!
     driverClassName: com.mysql.cj.jdbc.Driver
+  redis:
+    host: localhost
+    port: 6379
 
   #JPA 설정
   jpa:
