--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT API
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'   // JWT 구현체
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64' // 맥에서 netty 서버 구동 시 필요한 의존성
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
