HikariCP 프로퍼티 설정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,6 +4,14 @@ spring:
     username: onion-user
     password: onion1!
     driverClassName: com.mysql.cj.jdbc.Driver
+히    hikari:
+      maximum-pool-size: 10
+      connection-timeout: 5000
+      connection-init-sql: SELECT 1
+      validation-timeout: 2000
+      minimum-idle: 10
+      idle-timeout: 600000
+      max-lifetime: 1800000
   redis:
     host: localhost
     port: 6379
